knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Closed_Client_Abandoned_Proposal_Opps__c.field-meta.xml
<CustomField>
    <fullName>Closed_Client_Abandoned_Proposal_Opps__c</fullName>
    <description>Closed – Client Abandoned Proposal Opportunities</description>
    <label>Closed – Client Abandoned Proposal Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>