knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Closed_No_Change_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_No_Change_Opportunities__c</fullName>
    <label>Closed - No Change Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>