knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>