knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
            <value>
                <fullName>DefinitiveHC</fullName>
            </value>
            <value>
                <fullName>Digital Campaign</fullName>
            </value>
            <value>
                <fullName>Engage_CXO</fullName>
            </value>
            <value>
                <fullName>Inbound Website</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Outbound BDM Call</fullName>
            </value>
            <value>
                <fullName>Outbound Email</fullName>
            </value>
            <value>
                <fullName>Outbound VP Call</fullName>
            </value>
            <value>
                <fullName>Referral - External</fullName>
            </value>
            <value>
                <fullName>Referral - Internal</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Trade Show / Conference</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
                <isActive>false</isActive>
                <label>Client Referral</label>
            </value>
            <value>
                <fullName>Cold Call - New Territory</fullName>
                <isActive>false</isActive>
                <label>Cold Call - New Territory</label>
            </value>
            <value>
                <fullName>Cold Call-Other</fullName>
                <isActive>false</isActive>
                <label>Cold Call-Other</label>
            </value>
            <value>
                <fullName>Cold Call-TSG Database</fullName>
                <isActive>false</isActive>
                <label>Cold Call-TSG Database</label>
            </value>
            <value>
                <fullName>Existing Business Relationships</fullName>
                <isActive>false</isActive>
                <label>Existing Business Relationships</label>
            </value>
            <value>
                <fullName>Marketer Previous Business Contact</fullName>
                <isActive>false</isActive>
                <label>Marketer Previous Business Contact</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Outbound MM Call</fullName>
                <isActive>false</isActive>
                <label>Outbound MM Call</label>
            </value>
            <value>
                <fullName>Previous SG Business Contact</fullName>
                <isActive>false</isActive>
                <label>Previous SG Business Contact</label>
            </value>
            <value>
                <fullName>Public RFP</fullName>
                <isActive>false</isActive>
                <label>Public RFP</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Referral - Current SG Facility</fullName>
                <isActive>false</isActive>
                <label>Referral - Current SG Facility</label>
            </value>
            <value>
                <fullName>Referral - Internal Employee</fullName>
                <isActive>false</isActive>
                <label>Referral - Internal Employee</label>
            </value>
            <value>
                <fullName>Referral - Other</fullName>
                <isActive>false</isActive>
                <label>Referral - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>