knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Name_and_Status__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Status__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name &amp; &quot; - &quot; &amp; text(Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Status</label>
    <type>Text</type>
</CustomField>