knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Re_Sync_Deal__c.field-meta.xml
<CustomField>
    <fullName>Re_Sync_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you delete opportunities or believe the deal&apos;s counts are incorrect, check this box and save the record and the system will re-sync the deal.  This will only update counts.</inlineHelpText>
    <label>Re-Sync Deal</label>
    <type>Checkbox</type>
</CustomField>