knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Closed - Client Abandoned Proposal</fullName>
            </value>
            <value>
                <fullName>Closed - No Change</fullName>
            </value>
            <value>
                <fullName>Closed - No Change/Lost</fullName>
            </value>
            <value>
                <fullName>Closed-No Bid</fullName>
            </value>
            <value>
                <fullName>Closed - SCP Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>