knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Validate_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Validate_Deal_Status__c</fullName>
    <formula>IF(Count_of_Opportunities__c =  Won_Opportunities__c &amp;&amp; text(Status__c) != &quot;Won&quot;, 1,
IF(Count_of_Opportunities__c =  Lost_Opportunities__c &amp;&amp; text(Status__c) != &quot;Lost&quot;, 1,
IF(Count_of_Opportunities__c =  Open_Opportunities__c &amp;&amp; text(Status__c) != &quot;Open&quot;, 1,
IF(Count_of_Opportunities__c =  Closed_Client_Abandoned_Proposal_Opps__c &amp;&amp; text(Status__c) != &quot;Closed - Client Abandoned Proposal&quot;, 1,
IF(Count_of_Opportunities__c =  Closed_No_Change_Opportunities__c &amp;&amp; text(Status__c) != &quot;Closed - No Change&quot;, 1,
0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Deal Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>