knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Win_Loss_Date__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Date__c</fullName>
    <label>Win/Loss Date</label>
    <type>Date</type>
</CustomField>