knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/fields/Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunities__c</fullName>
    <label>Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>