knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal__c/validationRules/Win_loss_date_required_if_not_open.validationRule-meta.xml
<ValidationRule>
    <fullName>Win_loss_date_required_if_not_open</fullName>
    <active>false</active>
    <errorConditionFormula>(ispickval(Status__c,&quot;Won&quot;) || ispickval(Status__c,&quot;Lost&quot;))&amp;&amp; isnull(Win_Loss_Date__c)</errorConditionFormula>
    <errorDisplayField>Win_Loss_Date__c</errorDisplayField>
    <errorMessage>Win/Lost Date is required for this status.</errorMessage>
</ValidationRule>